[gd_scene load_steps=9 format=1]

[ext_resource path="res://Assets/Tileset.xml" type="TileSet" id=1]
[ext_resource path="res://Scenes/PlayerFight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/EnemyFight.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/fightGUI.gd" type="Script" id=4]
[ext_resource path="res://Assets/ui_timing_bar.tex" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/MainMenu Font.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Assets/ui_player_health.tex" type="Texture" id=7]
[ext_resource path="res://Assets/ui_enemy_health.tex" type="Texture" id=8]

[node name="Dungeon_Fight" type="Node"]

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -458760, 0, -458759, 0, -458758, 0, -458757, 0, -458756, 0, -458755, 0, -458754, 0, -458753, 0, -524288, 0, -524287, 0, -524286, 0, -524285, 0, -524284, 0, -524283, 0, -524282, 0, -524281, 0, -393224, 0, -458745, 0, -327688, 0, -393209, 0, -262152, 0, -327673, 0, -196616, 0, -262137, 0, -131080, 0, -196601, 0, -65544, 0, -131065, 0, -8, 0, -65529, 0, 65528, 0, 65529, 0, 65530, 0, 65531, 0, 65532, 0, 65533, 0, 65534, 0, 65535, 0, 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0 )
__meta__ = { "_edit_lock_":true }

[node name="Player" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( -253, -33 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 242, -38 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 0, -248 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="fightGUI" type="Control" parent="Camera2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 70.0
script/script = ExtResource( 4 )

[node name="timingButton" type="TextureButton" parent="Camera2D/fightGUI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -416.0
margin/top = -168.0
margin/right = -384.0
margin/bottom = -104.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="buttonTimer" type="Timer" parent="Camera2D/fightGUI"]

process_mode = 1
wait_time = 1.25
one_shot = false
autostart = true

[node name="playerCombo" type="Label" parent="Camera2D/fightGUI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -32.0
margin/top = -40.0
margin/right = 32.0
margin/bottom = -8.0
text = "HI"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="Camera2D/fightGUI/playerCombo"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -32.0
margin/top = -32.0
margin/right = 224.0
margin/bottom = 35.0
custom_fonts/font = ExtResource( 6 )
text = "COMBO"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playerScore" type="Label" parent="Camera2D/fightGUI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -448.0
margin/top = -232.0
margin/right = -378.0
margin/bottom = -197.0
text = "HI"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playerHealth" type="TextureProgress" parent="Camera2D/fightGUI"]

rect/scale = Vector2( 25, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -480.0
margin/top = -8.0
margin/right = -462.0
margin/bottom = 24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 7 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="enemyHealth" type="TextureProgress" parent="Camera2D/fightGUI"]

rect/scale = Vector2( 25, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = -8.0
margin/right = 50.0
margin/bottom = 24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 8 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="promptSpawn" type="Node2D" parent="Camera2D/fightGUI"]

transform/pos = Vector2( 384, -136 )

[connection signal="timeout" from="Camera2D/fightGUI/buttonTimer" to="Camera2D/fightGUI" method="_on_buttonTimer_timeout"]


